--- a/python-school/visualization/1-basics-sol.ipynb
+++ b/python-school/visualization/1-basics-sol.ipynb
@@ -458,8 +458,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "```{seealso}\n",
         "Legends in Matplotlib are quite flexible in layout, placement, and what\n",
-        "Artists they can represent. They are discussed in detail in the [legend guide](https://matplotlib.org/stable/users/explain/axes/legend_guide.html)"
+        "Artists they can represent. They are discussed in detail in the [legend guide](https://matplotlib.org/stable/users/explain/axes/legend_guide.html)\n",
+        "```"
       ]
     },
     {
@@ -516,8 +518,11 @@
       "metadata": {},
       "source": [
         "In this basic example, both *xy* and *xytext* are in data coordinates.\n",
+        "\n",
+        "```{seealso}\n",
         "There are a variety of other coordinate systems one can choose -- see\n",
-        "[the annotations tutorial](https://matplotlib.org/stable/users/explain/text/annotations.html)."
+        "[the annotations tutorial](https://matplotlib.org/stable/users/explain/text/annotations.html).\n",
+        "```"
       ]
     },
     {
