--- a/python-school/visualization/2-advanced-sol.ipynb
+++ b/python-school/visualization/2-advanced-sol.ipynb
@@ -417,7 +417,7 @@
    "metadata": {},
    "source": [
     "```{seealso}\n",
-    "This section was just a preview of what you can find in the [`Plotting dates and strings guide`](https://matplotlib.org/stable/users/explain/axes/axes_units.html).\n",
+    "This section was just a preview of what you can find in the [Plotting dates and strings guide](https://matplotlib.org/stable/users/explain/axes/axes_units.html).\n",
     "```"
    ]
   },
