--- a/python-school/dataframes/1-basics.ipynb
+++ b/python-school/dataframes/1-basics.ipynb
@@ -1633,7 +1633,7 @@
    "source": [
     "## Operations on strings\n",
     "\n",
-    "To perform operations on `string` columns, we need to use the `.str` accessor after selecting the right column. This gives you access to a number of methods, some similar to known Python method to manipulate strings, some not. For more details see [the documentation](https://docs.pola.rs/api/python/stable/reference/expressions/string.html)"
+    "To perform operations on `string` columns, we need to use the `.str` accessor after selecting the right column. This gives you access to a number of methods, some similar to known Python method to manipulate strings, some not. For more details, head over to [the documentation](https://docs.pola.rs/api/python/stable/reference/expressions/string.html)."
    ]
   },
   {
@@ -1778,7 +1778,7 @@
    "metadata": {},
    "source": [
     "```{note}\n",
-    "There is a bunch of other data types with a special accessor, but we won't cover them here\n",
+    "There is a bunch of other data types with a special accessor, but we won't cover them here.\n",
     "```"
    ]
   },
