--- a/python-school/visualization/2-advanced.ipynb
+++ b/python-school/visualization/2-advanced.ipynb
@@ -386,7 +386,7 @@
    "metadata": {},
    "source": [
     "```{seealso}\n",
-    "This section was just a preview of what you can find in the [`Plotting dates and strings guide`](https://matplotlib.org/stable/users/explain/axes/axes_units.html).\n",
+    "This section was just a preview of what you can find in the [Plotting dates and strings guide](https://matplotlib.org/stable/users/explain/axes/axes_units.html).\n",
     "```"
    ]
   },
