Hide forgotten answer

--- a/python-school/data_files/1-lines-sol.ipynb
+++ b/python-school/data_files/1-lines-sol.ipynb
@@ -280,7 +280,11 @@
      }
     },
     "colab_type": "code",
-    "id": "B5vALRz55bPq"
+    "id": "B5vALRz55bPq",
+    "tags": [
+     "answer",
+     "hide-cell"
+    ]
    },
    "outputs": [
     {
