--- a/python-school/numpy/2-exercises-sol.ipynb
+++ b/python-school/numpy/2-exercises-sol.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "id": "418ebe6c",
    "metadata": {},
    "outputs": [],
@@ -32,107 +32,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed055f1b",
-   "metadata": {},
-   "source": [
-    "### frame\n",
-    "\n",
-    "✪✪✪ RETURN a NEW Numpy matrix of `n` rows and `n` columns, in which all the values are zero except those on borders, which must be equal to a given `k`\n",
-    "\n",
-    "Ingredients:\n",
-    "\n",
-    "- create a matrix filled with zeros. ATTENTION: which dimensions does it have? Do you need `n` or `k` ? Read WELL the text.\n",
-    "\n",
-    "For this first version, try filling the rows and columns using `for in range` and writing directly in the single cells\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "c572ce7d",
-   "metadata": {
-    "tags": [
-     "answer",
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "def frame(n, k):\n",
-    "    mat = np.zeros((n, n))\n",
-    "    for i in range(n):\n",
-    "        mat[0, i] = k\n",
-    "        mat[i, 0] = k\n",
-    "        mat[i, n - 1] = k\n",
-    "        mat[n - 1, i] = k\n",
-    "    return mat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "id": "4a2e2c52",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[7., 7., 7., 7.],\n",
-       "       [7., 0., 0., 7.],\n",
-       "       [7., 0., 0., 7.],\n",
-       "       [7., 7., 7., 7.]])"
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frame(4, 7.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "d6800873",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expected_mat = np.array(\n",
-    "    [\n",
-    "        [7.0, 7.0, 7.0, 7.0],\n",
-    "        [7.0, 0.0, 0.0, 7.0],\n",
-    "        [7.0, 0.0, 0.0, 7.0],\n",
-    "        [7.0, 7.0, 7.0, 7.0],\n",
-    "    ]\n",
-    ")\n",
-    "# all_close return True if all the values in the first matrix are close enough\n",
-    "# (that is, within a given tolerance) to corresponding values in the second\n",
-    "assert np.allclose(frame(4, 7.0), expected_mat)\n",
-    "\n",
-    "expected_mat = np.array([[7.0]])\n",
-    "assert np.allclose(frame(1, 7.0), expected_mat)\n",
-    "\n",
-    "expected_mat = np.array([[7.0, 7.0], [7.0, 7.0]])\n",
-    "assert np.allclose(frame(2, 7.0), expected_mat)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e7098066",
    "metadata": {},
    "source": [
     "## Exercise - frameslices\n",
     "\n",
-    "✪✪✪ Solve the precious exercise, this time **using 4 slices**\n",
+    "✪✪✪ RETURN a NEW Numpy matrix of `n` rows and `n` columns, in which all the values are zero except those on borders, which must be equal to a given `k`.\n",
     "\n",
-    "- **DO NOT** use `for` nor `while` loops\n"
+    "**DO NOT** use `for` nor `while` loops, use slices!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "id": "4481e37c",
    "metadata": {
     "tags": [
@@ -147,15 +59,15 @@
     "\n",
     "    mat[0, :] = k\n",
     "    mat[:, 0] = k\n",
-    "    mat[:, n - 1] = k\n",
-    "    mat[n - 1, :] = k\n",
+    "    mat[:, -1] = k\n",
+    "    mat[-1, :] = k\n",
     "\n",
     "    return mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "id": "520cc7e6",
    "metadata": {},
    "outputs": [],
@@ -194,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "id": "0ab1af04",
    "metadata": {
     "tags": [
@@ -206,13 +118,13 @@
    "source": [
     "def framefill(n, k):\n",
     "    mat = np.full((n, n), k)\n",
-    "    mat[1 : n - 1, 1 : n - 1] = 0.0\n",
+    "    mat[1 : -1, 1 : -1] = 0.0\n",
     "    return mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "id": "b82986ce",
    "metadata": {},
    "outputs": [],
@@ -283,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "id": "fade3997",
    "metadata": {
     "tags": [
@@ -314,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "id": "bd2c03eb",
    "metadata": {},
    "outputs": [],
@@ -360,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "id": "ea7c410a",
    "metadata": {
     "tags": [
@@ -393,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "id": "a4b91dab",
    "metadata": {},
    "outputs": [
@@ -406,7 +318,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "id": "33914c3a",
    "metadata": {},
    "outputs": [],
@@ -495,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 11,
    "id": "0eb22b86",
    "metadata": {
     "tags": [
@@ -530,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "id": "45ef88e6",
    "metadata": {},
    "outputs": [
@@ -542,7 +454,7 @@
        "       [7., 1., 7., 9.]])"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 13,
    "id": "601aec0e",
    "metadata": {},
    "outputs": [],
@@ -601,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 14,
    "id": "fc78e700",
    "metadata": {
     "tags": [
@@ -632,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "id": "2f55e469",
    "metadata": {},
    "outputs": [
@@ -646,7 +558,7 @@
        "       [12.,  6.,  8.,  6.]])"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 16,
    "id": "37f73ce5",
    "metadata": {},
    "outputs": [],
@@ -705,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 17,
    "id": "310ef5bd",
    "metadata": {
     "tags": [
@@ -738,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 18,
    "id": "be1a3636",
    "metadata": {},
    "outputs": [
@@ -751,7 +663,7 @@
        "       [0., 1., 0., 1.]])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 19,
    "id": "4c1468cc",
    "metadata": {},
    "outputs": [],
@@ -801,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 20,
    "id": "9ff99fed",
    "metadata": {
     "tags": [
@@ -825,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 21,
    "id": "d1c1bcec",
    "metadata": {},
    "outputs": [
@@ -838,7 +750,7 @@
        "       [10., 16.,  9.,  6.]])"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 22,
    "id": "06b42a97",
    "metadata": {},
    "outputs": [],
@@ -911,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 23,
    "id": "1d8fb6e4",
    "metadata": {
     "tags": [
@@ -956,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 24,
    "id": "448a1362",
    "metadata": {},
    "outputs": [],
@@ -1004,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 25,
    "id": "62971821",
    "metadata": {
     "tags": [
@@ -1030,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 26,
    "id": "e59011b7",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 27,
    "id": "f828f2e5",
    "metadata": {
     "tags": [
@@ -1096,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 28,
    "id": "bf004029",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1018,7 @@
        "array([5, 4, 8])"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 29,
    "id": "d1179ab2",
    "metadata": {},
    "outputs": [],
@@ -1134,7 +1046,7 @@
     "m1 = np.array([[6]])\n",
     "assert np.allclose(colgap(m1), np.array([0]))\n",
     "ret = colgap(m1)\n",
-    "assert type(ret) == np.ndarray\n",
+    "assert isinstance(ret, np.ndarray)\n",
     "\n",
     "m2 = np.array([[6, 8]])\n",
     "assert np.allclose(colgap(m2), np.array([0, 0]))\n",
@@ -1192,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 30,
    "id": "22ac61ae",
    "metadata": {
     "tags": [
@@ -1219,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 31,
    "id": "fb440470",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1145,7 @@
        "       [8, 7, 9]])"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 32,
    "id": "5f7234dc",
    "metadata": {},
    "outputs": [],
@@ -1263,7 +1175,7 @@
     "substmax(m1)\n",
     "assert np.allclose(m1, np.array([6]))\n",
     "ret = substmax(m1)\n",
-    "assert ret == None  # returns nothing!\n",
+    "assert ret is None  # returns nothing!\n",
     "\n",
     "m2 = np.array([[6, 8]])\n",
     "substmax(m2)\n",
@@ -1364,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 33,
    "id": "12c544eb",
    "metadata": {
     "tags": [
@@ -1420,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 34,
    "id": "b3700a13",
    "metadata": {},
    "outputs": [],
@@ -1460,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 35,
    "id": "22dd1979",
    "metadata": {
     "tags": [
@@ -1497,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 36,
    "id": "8252729c",
    "metadata": {},
    "outputs": [
@@ -1512,7 +1424,7 @@
        "       [0., 1., 2., 3., 4., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,13 +1435,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 37,
    "id": "e8d982f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "assert np.allclose(downup(2, 2), np.array([[0.0, 0.0], [0.0, 0.0]]))\n",
-    "assert type(downup(2, 2)) == np.ndarray\n",
+    "assert isinstance(downup(2, 2), np.ndarray)\n",
     "\n",
     "assert np.allclose(\n",
     "    downup(2, 6),\n",
@@ -1580,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 38,
    "id": "39fd832d",
    "metadata": {},
    "outputs": [],
@@ -1614,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 39,
    "id": "68c1bcb8",
    "metadata": {},
    "outputs": [
@@ -1624,7 +1536,7 @@
        "array([6., 3., 4., 2., 4., 5., 3., 9., 7.])"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1645,18 +1557,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 40,
    "id": "bae14b36",
    "metadata": {},
    "outputs": [],
    "source": [
     "m1 = np.array([[7]])\n",
     "assert np.allclose(stairsteps(m1), np.array([7]))\n",
-    "assert type(m1) == np.ndarray\n",
+    "assert isinstance(m1, np.ndarray)\n",
     "\n",
     "m2 = np.array([[6, 8], [9, 3]])\n",
     "assert np.allclose(stairsteps(m2), np.array([6, 8, 3]))\n",
-    "assert type(m1) == np.ndarray\n",
+    "assert isinstance(m1, np.ndarray)\n",
     "\n",
     "m3 = np.array(\n",
     "    [\n",
@@ -1689,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 41,
    "id": "64dd2c6a",
    "metadata": {
     "tags": [
@@ -1719,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 55,
    "id": "79f6acd0",
    "metadata": {},
    "outputs": [],
@@ -1728,7 +1640,7 @@
     "assert np.allclose(vertstairs(1, 2), np.array([[1, 1]]))\n",
     "assert np.allclose(vertstairs(2, 1), np.array([[1], [2]]))\n",
     "assert np.allclose(vertstairs(2, 2), np.array([[1, 2], [2, 1]]))\n",
-    "assert type(vertstairs(2, 2)) == np.ndarray\n",
+    "assert isinstance(vertstairs(2, 2), np.ndarray)\n",
     "assert np.allclose(\n",
     "    vertstairs(4, 5),\n",
     "    np.array([[1, 4, 1, 4, 1], [2, 3, 2, 3, 2], [3, 2, 3, 2, 3], [4, 1, 4, 1, 4]]),\n",
@@ -1769,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 43,
    "id": "ee18a606",
    "metadata": {
     "tags": [
@@ -1792,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 44,
    "id": "4ab01830",
    "metadata": {},
    "outputs": [
@@ -1806,7 +1718,7 @@
        "       [ 9,  7,  7]])"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,14 +1738,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 56,
    "id": "4ef6606e",
    "metadata": {},
    "outputs": [],
    "source": [
     "m1 = [[7, 9]]\n",
     "res = comprescol(np.array(m1))\n",
-    "assert type(res) == np.ndarray\n",
+    "assert isinstance(res, np.ndarray)\n",
     "assert np.allclose(res, np.array([[16]]))\n",
     "\n",
     "m2 = np.array([[5, 8], [7, 2]])\n",
@@ -1878,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 46,
    "id": "69daa7bb",
    "metadata": {
     "tags": [
@@ -1902,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 47,
    "id": "65c271a5",
    "metadata": {},
    "outputs": [
@@ -1916,7 +1828,7 @@
        "       [2, 3, 9, 7, 2]])"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1936,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 48,
    "id": "da982024",
    "metadata": {},
    "outputs": [],
@@ -1996,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 49,
    "id": "769f9840",
    "metadata": {
     "tags": [
@@ -2017,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 50,
    "id": "11f71947",
    "metadata": {},
    "outputs": [
@@ -2027,7 +1939,7 @@
        "array([4., 3., 8., 5., 2., 7., 3., 8., 4., 6., 5., 7.])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2048,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 51,
    "id": "9eefb5ab",
    "metadata": {},
    "outputs": [],
@@ -2095,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 52,
    "id": "279f5b29",
    "metadata": {
     "tags": [
@@ -2116,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 53,
    "id": "bbb48ee4",
    "metadata": {},
    "outputs": [
@@ -2126,7 +2038,7 @@
        "array([5., 1., 6., 5., 2., 7., 3., 8., 4., 2., 8., 5.])"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2147,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 54,
    "id": "0dd28583",
    "metadata": {},
    "outputs": [],
